--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "bootstrap": "4.6.2",
     "chart.js": "3.9.1",
     "classnames": "2.3.2",
+    "moment": "^2.30.1",
     "perfect-scrollbar": "1.5.5",
     "prop-types": "15.8.1",
-    "react": "18.2.0",
+    "react": ">=16.8.0",
+    "react-big-calendar": "^1.12.0",
     "react-chartjs-2": "3.3.0",
-    "react-dom": "18.2.0",
+    "react-dom": ">=16.8.0",
     "react-notification-alert": "0.0.13",
     "react-router-dom": "6.11.1",
     "react-scripts": "5.0.1",
