--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "homepage": "https://demos.creative-tim.com/black-dashboard-react/#/admin/dashboard",
   "dependencies": {
     "@fortawesome/fontawesome-free": "6.4.0",
-    "bootstrap": "4.6.2",
+    "antd": "^5.17.0",
+    "bootstrap": "^4.6.2",
     "chart.js": "3.9.1",
     "classnames": "2.3.2",
     "moment": "^2.30.1",
@@ -13,12 +14,15 @@
     "prop-types": "15.8.1",
     "react": ">=16.8.0",
     "react-big-calendar": "^1.12.0",
+    "react-bootstrap": "^2.10.2",
     "react-chartjs-2": "3.3.0",
+    "react-datepicker": "^6.9.0",
     "react-dom": ">=16.8.0",
     "react-notification-alert": "0.0.13",
     "react-router-dom": "6.11.1",
     "react-scripts": "5.0.1",
-    "sass": "1.62.1"
+    "sass": "1.62.1",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
