--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^4.6.2",
     "chart.js": "3.9.1",
     "classnames": "2.3.2",
+    "formik": "^2.4.6",
     "moment": "^2.30.1",
     "perfect-scrollbar": "1.5.5",
     "prop-types": "15.8.1",
@@ -22,7 +23,8 @@
     "react-router-dom": "6.11.1",
     "react-scripts": "5.0.1",
     "sass": "1.62.1",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
