--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "homepage": "https://demos.creative-tim.com/black-dashboard-react/#/admin/dashboard",
   "dependencies": {
     "@fortawesome/fontawesome-free": "6.4.0",
+    "@reduxjs/toolkit": "^2.2.5",
     "antd": "^5.17.0",
+    "antd-phone-input": "^0.3.7",
     "bootstrap": "^4.6.2",
     "chart.js": "3.9.1",
     "classnames": "2.3.2",
@@ -20,6 +22,8 @@
     "react-datepicker": "^6.9.0",
     "react-dom": ">=16.8.0",
     "react-notification-alert": "0.0.13",
+    "react-otp-input": "^3.1.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "6.11.1",
     "react-scripts": "5.0.1",
     "sass": "1.62.1",
