--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-notification-alert": "0.0.13",
     "react-otp-input": "^3.1.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "6.11.1",
+    "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "sass": "1.62.1",
     "xlsx": "^0.18.5",
