--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
-  "name": "black-dashboard-react",
+  "name": "bulkSms-pr-test",
   "version": "1.2.2",
-  "private": true,
-  "homepage": "https://demos.creative-tim.com/black-dashboard-react/#/admin/dashboard",
   "dependencies": {
     "@fortawesome/fontawesome-free": "6.4.0",
     "@reduxjs/toolkit": "^2.2.5",
